tests/error/enum_errors/bad_variant_def1.py
from guppylang.decorator import guppy


@guppy.enum
class MyEnum:
    v1 = 20


MyEnum.compile()
